--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.Flex{
     display: flex;
     margin-bottom: 150px;
 }
@@ -34,4 +34,30 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.box{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    box-shadow: 10px 10px 5px gray;
+    border-radius: 10px;
+}
+.Experiences-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position-y: 175px;
+}
+.border-1{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, tomato);
+    border-image-slice: 1;
+}
+.border-2{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
